--- a/index.html
+++ b/index.html
@@ -2,50 +2,51 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hamza El Khoukhi - Profil</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: auto;
-      padding: 20px;
-      line-height: 1.6;
-    }
-    h1, h2 {
-      color: #2c3e50;
-    }
-    nav a {
-      margin-right: 15px;
-      text-decoration: none;
-      color: #3498db;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hamza El Khoukhi, PhD</h1>
-  <p>ATER à l’Université Toulouse 2 Jean Jaurès | Docteur en Intelligence Artificielle | Data Scientist & Chercheur</p>
+  <header>
+    <h1>Hamza El Khoukhi</h1>
+    <p>PhD – Intelligence Artificielle | ATER à l’Université Toulouse 2</p>
+    <nav>
+      <a href="#about">À propos</a>
+      <a href="#projects">Projets</a>
+      <a href="#publications">Publications</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-  <nav>
-    <a href="#about">À propos</a>
-    <a href="#projects">Projets</a>
-    <a href="#publications">Publications</a>
-    <a href="#contact">Contact</a>
-  </nav>
+  <main>
+    <section id="about">
+      <h2>À propos</h2>
+      <p>Je suis docteur en intelligence artificielle, passionné par le streaming data, l’IoT, et les systèmes distribués intelligents. Actuellement ATER à Toulouse 2.</p>
+    </section>
 
-  <h2 id="about">À propos</h2>
-  <p>Je suis chercheur en intelligence artificielle, spécialisé en apprentissage automatique, streaming data, et IoT.</p>
+    <section id="projects">
+      <h2>Projets</h2>
+      <ul>
+        <li><strong>HOLSYS</strong> – Système de gestion des bâtiments intelligents</li>
+        <li><strong>MIGRID</strong> – Micro-réseaux hybrides intelligents (USAID)</li>
+        <li><strong>SELFSERV</strong> – Téléassistance pour diabétiques (VLIR-UOS)</li>
+      </ul>
+    </section>
 
-  <h2 id="projects">Projets</h2>
-  <ul>
-    <li><strong>HOLSYS</strong> : Gestion intelligente des bâtiments (IRESEN/GEP/UIR)</li>
-    <li><strong>MIGRID</strong> : Réseaux hybrides intelligents (USAID-PEER)</li>
-  </ul>
+    <section id="publications">
+      <h2>Publications</h2>
+      <p>Voir mon <a href="https://scholar.google.com/" target="_blank">profil Google Scholar</a></p>
+    </section>
 
-  <h2 id="publications">Publications</h2>
-  <p>Voir mon profil <a href="https://scholar.google.com/" target="_blank">Google Scholar</a></p>
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>📧 hamza[at]example.com</p>
+      <p>🐙 <a href="https://github.com/hamzaelkh" target="_blank">GitHub</a></p>
+    </section>
+  </main>
 
-  <h2 id="contact">Contact</h2>
-  <p>Email : hamza[at]example[dot]com<br>GitHub : <a href="https://github.com/hamzaelkh" target="_blank">hamzaelkh</a></p>
+  <footer>
+    <p>&copy; 2025 Hamza El Khoukhi</p>
+  </footer>
 </body>
 </html>
