--- a/index.html
+++ b/index.html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Profil de Hamza El KHOUKHI</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Hamza El Khoukhi - Profil</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <nav class="navbar">
-    <div class="logo">Hamza El KHOUKHI</div>
-    <ul class="nav-links">
-      <li><a href="#profil">Profil</a></li>
-      <li><a href="#projets">Projets</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-
-  <header class="hero" id="profil">
-    <img src="profile.jpg" alt="Photo de profil" class="profile-pic">
-    <h1>Hamza El KHOUKHI</h1>
-    <p>Docteur en Intelligence Artificielle | ATER à l’Université Toulouse 2</p>
+  <header>
+    <h1>Hamza El Khoukhi</h1>
+    <p>PhD – Intelligence Artificielle | ATER à l’Université Toulouse 2</p>
+    <nav>
+      <a href="#about">À propos</a>
+      <a href="#projects">Projets</a>
+      <a href="#publications">Publications</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
-  <section class="summary">
-    <h2>À propos</h2>
-    <p>
-      Expert en IA, edge computing et apprentissage distribué, je suis passionné par la conception de systèmes intelligents, notamment sur plateformes embarquées (Raspberry Pi, Jetson Nano) avec traitement en streaming. 
-      Mes projets couvrent l’IoT, l’optimisation énergétique et l’explicabilité des modèles ML pour les systèmes complexes.
-    </p>
-    <img src="architecture.png" alt="Architecture système IA" class="architecture-img">
-  </section>
+  <main>
+    <section id="about">
+      <h2>À propos</h2>
+      <p>Je suis docteur en intelligence artificielle, passionné par le streaming data, l’IoT, et les systèmes distribués intelligents. Actuellement ATER à Toulouse 2.</p>
+    </section>
 
-  <section class="projects" id="projets">
-    <h2>Projets récents</h2>
-    <ul>
-      <li>🧠 Détection d’occupation en streaming avec Vertical Hoeffding Tree</li>
-      <li>🌍 Edge AI pour la surveillance environnementale (Raspberry Pi + modèles fédérés)</li>
-      <li>🔧 Contrôle de systèmes antagonistes via Reinforcement Learning (Postdoc à Pascal Institute)</li>
-    </ul>
-  </section>
+    <section id="projects">
+      <h2>Projets</h2>
+      <ul>
+        <li><strong>HOLSYS</strong> – Système de gestion des bâtiments intelligents</li>
+        <li><strong>MIGRID</strong> – Micro-réseaux hybrides intelligents (USAID)</li>
+        <li><strong>SELFSERV</strong> – Téléassistance pour diabétiques (VLIR-UOS)</li>
+      </ul>
+    </section>
 
-  <footer id="contact">
-    <h2>Contact</h2>
-    <p>Email : hamza.elkhoukhi@example.com</p>
-    <p>LinkedIn : <a href="https://linkedin.com/in/hamzaelkhoukhi" target="_blank">hamzaelkhoukhi</a></p>
+    <section id="publications">
+      <h2>Publications</h2>
+      <p>Voir mon <a href="https://scholar.google.com/" target="_blank">profil Google Scholar</a></p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>📧 hamza[at]example.com</p>
+      <p>🐙 <a href="https://github.com/hamzaelkh" target="_blank">GitHub</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Hamza El Khoukhi</p>
   </footer>
-
 </body>
 </html>
