--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>Hamza El Khoukhi</h1>
-    <p>PhD – Intelligence Artificielle | ATER à l’Université Toulouse 2</p>
+    <div class="header-container">
+      <img src="profile.jpg" alt="Photo de Hamza El Khoukhi" class="profile-photo">
+      <h1>Hamza El Khoukhi</h1>
+      <p>PhD – Intelligence Artificielle | ATER à l’Université Toulouse 2</p>
+    </div>
+    <div class="header-container">
     <nav>
       <a href="#about">À propos</a>
       <a href="#projects">Projets</a>
