new updates Publications

--- a/index.html
+++ b/index.html
@@ -42,22 +42,33 @@
 
     
     <section id="projects" class="content-section hidden">
-      <h2>Projets</h2>
+      <h2>Projets de recherche</h2>
       <ul>
-        <li><strong>2019- 2022 : HOLSYS Projet, </strong> IRESEN/GEP/UIR, Maroc 
+        <li><strong>2019 - 2022 : HOLSYS Projet, </strong> IRESEN/GEP/UIR, Maroc 
         <p>L’objectif de projet est de développer une plateforme holistique pour la gestion du système actif et passif des bâtiments intelligents.</p>
         </li>
-        <li><strong>MIGRID</strong> – Micro-réseaux hybrides intelligents (USAID)</li>
-        <li><strong>SELFSERV</strong> – Téléassistance pour diabétiques (VLIR-UOS)</li>
+        <li><strong>2018 - 2019 :    MIGRID</strong> USAID-PEER Project, UIR, Maroc</li>
+        <p>Le projet s'inscrit dans le domaine des TIC, des réseaux sans fil, des énergies renouvelables, de l'efficacité énergétique des bâtiments intelligents</p>
+        <li><strong>2017 :	SELFSERV </strong> VLIR-UOS, Anvers, Belgique</li>
+        <p>L'objectif principal est de développer une plateforme logicielle pour l’amélioration de services de téléassistance au diabète</p>
       </ul>
     </section>
 
     <section id="publications" class="content-section hidden">
       <h2>Publications</h2>
-      <ul>
-        <li>El Khoukhi H. et al., « Occupancy Detection in Smart Buildings using Vertical Hoeffding Tree », 2020.</li>
-        <li>Voir aussi sur <a href="#">Google Scholar</a>.</li>
-      </ul>
+      <ol class = "bracketed">
+        <li>Elkhoukhi, Hamza, et al. "Towards a real-time occupancy detection approach for smart buildings." Procedia computer science 134 (2018): 114-120.</li>
+        <li>Elkhoukhi, Hamza, et al. "Using stream data processing for real-time occupancy detection in smart buildings." Sensors 22.6 (2022): 2371.</li>
+        <li>Elkhoukhi, Hamza, et al. "A platform architecture for occupancy detection using stream processing and machine learning approaches." Concurrency and Computation: Practice and Experience 32.17 (2020): e5651.</li>
+        <li>Elkhoukhi, Hamza, et al. "On the use of deep learning approaches for occupancy prediction in energy efficient buildings." 2019 7th International Renewable and Sustainable Energy Conference (IRSEC). IEEE, 2019.</li>
+        <li>Elkhoukhi, H., et al. "A review of occupancy sensing technologies and approaches in smart buildings." International Journal of RF Technologies 15.1 (2025): 19-48.</li>
+        <li>Elkhoukhi, Hamza, et al. "Overview of Sensing and Data Processing Technologies for Smart Building Services and Applications." Sustainability 17.9 (2025): 4029.</li>
+        <li>Kabir, Raaid, et al. "Photovoltaic power forecasting using neural networks for short and medium-term dependencies." 2024 IEEE Texas Power and Energy Conference (TPEC). IEEE, 2024.</li>
+        <li>Malek, Y. Nait, et al. "On the use of IoT and big data technologies for real-time monitoring and data processing." Procedia computer science 113 (2017): 429-434.</li>
+        <li>Kharbouch, Abdelhak, et al. "Internet-of-things based hardware-in-the-loop framework for model-predictive-control of smart building ventilation." Sensors 22.20 (2022): 7978.</li>
+        <li>Kharbouch, Abdelhak, et al. "IoT and big data technologies for monitoring and processing real-time healthcare data." International Journal of Distributed Systems and Technologies (IJDST) 10.4 (2019): 17-30.</li>
+        <li>Kharbouch, Abdelhak, et al. "Towards an IoT and big data analytics platform for the definition of diabetes telecare services." Smart application and data analysis for smart cities (SADASC'18) (2018).</li>
+      </ol>
     </section>
 
 
