--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     
     <section id="contact" class="content-section hidden">
       <h2>Contact</h2>
-      <p>Email : <a href="mailto:hamza.el_khoukhi@univ-tlse2.fr">hamza.el_khoukhi@univ-tlse2.fr</a></p>
+      <p>Email : <a href="mailto:hamza.el-khoukhi@irit.fr">hamza.el-khoukhi@irit.fr</a></p>
       <p>LinkedIn : <a href="https://linkedin.com/in/hamzaelkhoukhi" target="_blank">hamzaelkhoukhi</a></p>
     </section>
 
