add teaching part

--- a/index.html
+++ b/index.html
@@ -89,13 +89,55 @@
 
 
     <section id="teaching" class="content-section hidden">
-      <h2>Enseignement & Encadrement</h2>
-      <ul>
-        <li>ATER à Toulouse 2</li>
-        <li>Cours : IoT, Cloud Computing, IA</li>
-        <li>Encadrement de projets de licence et master</li>
-      </ul>
+      <h2>Table des cours — Math-Informatique, Université Toulouse 2 Jean Jaurès</h2>
+      <table border="1" cellspacing="0" cellpadding="8" style="width:100%; border-collapse: collapse; text-align: left;">
+        <thead style="background-color: #1e3a8a; color: white;">
+          <tr>
+            <th>Cours</th>
+            <th>Département / Établissement</th>
+            <th>Volume Horaire</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Bases de l'algorithmique et de la programmation / Méthodologie (TD)</td>
+            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>16h</td>
+          </tr>
+          <tr>
+            <td>Structure de données et récursivité (TD)</td>
+            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>6h</td>
+          </tr>
+          <tr>
+            <td>Architecture des ordinateurs (CM)</td>
+            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>6h</td>
+          </tr>
+          <tr>
+            <td>Programmation système et réseaux (CM+TD)</td>
+            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>28h</td>
+          </tr>
+          <tr>
+            <td>Programmation mobile (CM + TD)</td>
+            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>44h</td>
+          </tr>
+          <tr>
+            <td>Complexité et théories des graphes (TD)</td>
+            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>10h</td>
+          </tr>
+          <tr>
+            <td>Certificat de PIX (TD)</td>
+            <td>Math-Informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>58h</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
+
 
     
     <section id="contact" class="content-section hidden">
