--- a/index.html
+++ b/index.html
@@ -88,11 +88,10 @@
     </section>
 
 
-    <section id="teaching" class="content-section">
+    <section id="teaching" class="content-section hidden">
       <h2>Table des cours — Math-Informatique, Université Toulouse 2 Jean Jaurès</h2>
-      <table>
-        <caption>Liste des cours, département et volume horaire</caption>
-        <thead>
+      <table border="4" cellspacing="0" cellpadding="8" style="width:100%; border-collapse: collapse; text-align: left;">
+        <thead style="background-color: #1e3a8a; color: white;">
           <tr>
             <th>Cours</th>
             <th>Département / Établissement</th>
@@ -101,44 +100,43 @@
         </thead>
         <tbody>
           <tr>
-            <td data-label="Cours">Bases de l'algorithmique et de la programmation / Méthodologie (TD)</td>
-            <td data-label="Département / Établissement">Math-informatique / Université Toulouse 2 Jean Jaurès</td>
-            <td data-label="Volume Horaire">16h</td>
+            <td>Bases de l'algorithmique et de la programmation / Méthodologie (TD)</td>
+            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>16h</td>
           </tr>
           <tr>
-            <td data-label="Cours">Structure de données et récursivité (TD)</td>
-            <td data-label="Département / Établissement">Math-informatique / Université Toulouse 2 Jean Jaurès</td>
-            <td data-label="Volume Horaire">6h</td>
+            <td>Structure de données et récursivité (TD)</td>
+            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>6h</td>
           </tr>
           <tr>
-            <td data-label="Cours">Architecture des ordinateurs (CM)</td>
-            <td data-label="Département / Établissement">Math-informatique / Université Toulouse 2 Jean Jaurès</td>
-            <td data-label="Volume Horaire">6h</td>
+            <td>Architecture des ordinateurs (CM)</td>
+            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>6h</td>
           </tr>
           <tr>
-            <td data-label="Cours">Programmation système et réseaux (CM+TD)</td>
-            <td data-label="Département / Établissement">Math-informatique / Université Toulouse 2 Jean Jaurès</td>
-            <td data-label="Volume Horaire">28h</td>
+            <td>Programmation système et réseaux (CM+TD)</td>
+            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>28h</td>
           </tr>
           <tr>
-            <td data-label="Cours">Programmation mobile (CM + TD)</td>
-            <td data-label="Département / Établissement">Math-informatique / Université Toulouse 2 Jean Jaurès</td>
-            <td data-label="Volume Horaire">44h</td>
+            <td>Programmation mobile (CM + TD)</td>
+            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>44h</td>
           </tr>
           <tr>
-            <td data-label="Cours">Complexité et théories des graphes (TD)</td>
-            <td data-label="Département / Établissement">Math-informatique / Université Toulouse 2 Jean Jaurès</td>
-            <td data-label="Volume Horaire">10h</td>
+            <td>Complexité et théories des graphes (TD)</td>
+            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>10h</td>
           </tr>
           <tr>
-            <td data-label="Cours">Certificat de PIX (TD)</td>
-            <td data-label="Département / Établissement">Math-Informatique / Université Toulouse 2 Jean Jaurès</td>
-            <td data-label="Volume Horaire">58h</td>
+            <td>Certificat de PIX (TD)</td>
+            <td>Math-Informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>58h</td>
           </tr>
         </tbody>
       </table>
     </section>
-
 
 
     
