add CV and update CV section

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 
     <section id="cv" class="content-section hidden">
       <h2>CV</h2>
-      <p>Téléchargez mon <a href="Hamza_ElKhoukhi_CV.pdf" target="_blank">CV en PDF</a>.</p>
+      <p>Téléchargez mon <a href="CV_VF_F.pdf" target="_blank">CV en PDF</a>.</p>
     </section>
 
 
     <section id="teaching" class="content-section hidden">
-      <h2>Table des cours — Math-Informatique, Université Toulouse 2 Jean Jaurès</h2>
+      <h2>Activités d’enseignement </h2>
       <table border="4" cellspacing="0" cellpadding="8" style="width:100%; border-collapse: collapse; text-align: left;">
         <thead style="background-color: #1e3a8a; color: white;">
           <tr>
@@ -127,12 +127,37 @@
           <tr>
             <td>Complexité et théories des graphes (TD)</td>
             <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
-            <td>10h</td>
+            <td>6h</td>
+          </tr>
+            <tr>
+            <td>Programmation Python (CM+TD/TP)</td>
+            <td>Informatique /EMSI</td>
+            <td>90h</td>
           </tr>
           <tr>
-            <td>Certificat de PIX (TD)</td>
-            <td>Math-Informatique / Université Toulouse 2 Jean Jaurès</td>
-            <td>58h</td>
+            <td>Systèmes d’exploitation (CM+TD/TP)</td>
+            <td>Informatique /EMSI</td>
+            <td>90h</td>
+          </tr>
+          <tr>
+            <td>Base de données avancées SQLServer (CM+TD/TP)</td>
+            <td>Informatique /EMSI</td>
+            <td>90h</td>
+          </tr>
+          <tr>
+            <td>Algorithmiques et programmation (TD)</td>
+            <td>Informatique/ UIR</td>
+            <td>20h</td>
+          </tr>
+          <tr>
+            <td>Systèmes d’exploitation (TP)</td>
+            <td>Informatique/ UIR</td>
+            <td>20h</td>
+          </tr>
+          <tr>
+            <td>IoT and Cloud Computing Applications (TD/TP)</td>
+            <td>Informatique/ UIR</td>
+            <td>60h</td>
           </tr>
         </tbody>
       </table>
