--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
           <p>
             Ses principaux intérêts comprennent l'<strong>intelligence artificielle</strong> et ses applications, 
-            les approches d'<strong>apprentissage automatique en temps réel</strong>, 
+            les approches d'<strong>apprentissage automatique en temps réel et distribué</strong>, 
             ainsi que les techniques de <strong>traitement de données en flux</strong>.
           </p>
         </div>
