update menu mobile

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         <h1>Hamza El Khoukhi</h1>
         <p>PhD – Intelligence Artificielle | ATER - IRIT / Université Toulouse 2</p>
       </div>
+          <!-- Hamburger Icon -->
+    <div class="menu-toggle" id="menu-toggle">
+      ☰
     </div>
-    <nav>
+    </div>
+    <nav id="nav-menu">
       <a href="#" onclick="showSection('about')">Biographie</a>
       <a href="#" onclick="showSection('projects')">Projets de recherche</a>
       <a href="#" onclick="showSection('publications')">Publications</a>
@@ -78,7 +82,7 @@
       </ul>
     </section>-->
 
-    <section class="content-section" id="projects">
+    <section class="content-section" id="projects hidden">
       <h2 style="color: #1e3a8a; border-bottom: 2px solid #1e3a8a; padding-bottom: 8px;">
         Projets de recherche
       </h2>
@@ -134,7 +138,7 @@
 
 
 
-    <section id="publications" class="content-section">
+    <section id="publications" class="content-section hidden">
       <h2 style="color: #1e3a8a; border-bottom: 2px solid #1e3a8a; padding-bottom: 8px;">📚 Publications</h2>
 
       <!-- Journaux -->
@@ -216,7 +220,7 @@
 
 
 
-    <section id="download-cv" class="content-section">
+    <section id="download-cv" class="content-section hidden">
       <h2 style="color: #1e3a8a; border-bottom: 2px solid #1e3a8a; padding-bottom: 8px;">
         Télécharger mon CV
       </h2>
