--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
         <h1>Hamza El Khoukhi</h1>
         <p>PhD – Intelligence Artificielle | ATER - IRIT / Université Toulouse 2</p>
       </div>
-          <!-- Hamburger Icon -->
-    <div class="menu-toggle" id="menu-toggle">
-      ☰
     </div>
+
+    <div class="nav-container"></div>
+      <div class="menu-toggle" id="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <nav id="nav-menu">
+        <a href="#" onclick="showSection('about')">Biographie</a>
+        <a href="#" onclick="showSection('projects')">Projets de recherche</a>
+        <a href="#" onclick="showSection('publications')">Publications</a>
+        <!--<a href="#" onclick="showSection('talks')">Talks</a>-->
+        <a href="#" onclick="showSection('download-cv')">CV</a>
+        <a href="#" onclick="showSection('teaching')">Enseignement</a>
+        <a href="#" onclick="showSection('contact')">Contact</a>
+      </nav>
     </div>
-    <nav id="nav-menu">
-      <a href="#" onclick="showSection('about')">Biographie</a>
-      <a href="#" onclick="showSection('projects')">Projets de recherche</a>
-      <a href="#" onclick="showSection('publications')">Publications</a>
-      <!--<a href="#" onclick="showSection('talks')">Talks</a>-->
-      <a href="#" onclick="showSection('download-cv')">CV</a>
-      <a href="#" onclick="showSection('teaching')">Enseignement</a>
-      <a href="#" onclick="showSection('contact')">Contact</a>
-    </nav>
   </header>
 
   <main>
