--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </ul>
     </section>-->
 
-    <section class="content-section" id="projects hidden">
+    <section class="content-section hidden" id="projects">
       <h2 style="color: #1e3a8a; border-bottom: 2px solid #1e3a8a; padding-bottom: 8px;">
         Projets de recherche
       </h2>
