cv download update

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
       <p>Vous pouvez télécharger mon CV en cliquant sur le bouton ci-dessous :</p>
 
-      <a href="docs/hamza_elkhoukhi_cv.pdf" download="Hamza_ElKhoukhi_CV.pdf" class="cv-button">
+      <a href="docs/hamza_elkhoukhi_cv.pdf" target="_blank" class="cv-button">
         Télécharger le CV
       </a>
     </section>
