--- a/index.html
+++ b/index.html
@@ -44,24 +44,25 @@
       <div class="bio-container">
 
         <!-- Timeline / Text -->
-        <div class="bio-text">
-          <p>
-            Actuellement, <strong>ATER à l’Université Toulouse 2 Jean Jaurès</strong>. 
-            Précédemment, chercheur postdoctorant en <strong>IA et robotique</strong> à l'Institut Pascal et à l'INP, Clermont-Ferrand, France.
-          </p>
+      <div class="bio-text">
+        <p>
+          Actuellement, <strong>ATER à l’Université Toulouse 2 Jean Jaurès</strong> et membre de l’équipe 
+          <strong><a href="https://www.irit.fr/smac/" target="_blank">SMAC</a></strong> au sein de l’<strong>IRIT</strong> (Institut de Recherche en Informatique de Toulouse). 
+          Précédemment, chercheur postdoctorant en <strong>IA et robotique</strong> à l'Institut Pascal et à l'INP, Clermont-Ferrand, France.
+        </p>
 
-          <p>
-            Doctorant en collaboration entre l'Université Moulay Ismail de Meknès et l'Université Internationale de Rabat, Maroc, 
-            sur différents projets de recherche :
-            <strong>SELFSERV</strong> (VLIR-UOS), <strong>MIGRID</strong> (USAID-PEER), et <strong>HOLSYS</strong> (IRESEN).
-          </p>
+        <p>
+          Doctorant en collaboration entre l'Université Moulay Ismail de Meknès et l'Université Internationale de Rabat, Maroc, 
+          sur différents projets de recherche :
+          <strong>SELFSERV</strong> (VLIR-UOS), <strong>MIGRID</strong> (USAID-PEER), et <strong>HOLSYS</strong> (IRESEN).
+        </p>
 
-          <p>
-            Ses principaux intérêts comprennent l'<strong>intelligence artificielle</strong> et ses applications, 
-            les approches d'<strong>apprentissage automatique en temps réel et distribué</strong>, 
-            ainsi que les techniques de <strong>traitement de données en flux</strong>.
-          </p>
-        </div>
+        <p>
+          Ses principaux intérêts comprennent l'<strong>intelligence artificielle</strong> et ses applications, 
+          les approches d'<strong>apprentissage automatique en temps réel et distribué</strong>, 
+          ainsi que les techniques de <strong>traitement de données en flux</strong>.
+        </p>
+      </div>
 
         <!-- Image -->
         <div class="bio-image">
